cis-perf/yaml/zone3/120-ns-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3100
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3100.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3101
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3101.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3102
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3102.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3103
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3103.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3104
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3104.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3105
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3105.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3106
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3106.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3107
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3107.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3108
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3108.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3109
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3109.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3110
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3110.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3111
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3111.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3112
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3112.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3113
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3113.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3114
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3114.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3115
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3115.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3116
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3116.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3117
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3117.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3118
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3118.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3119
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3119.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3120
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3120.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3121
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3121.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3122
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3122.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3123
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3123.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3124
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3124.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3125
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3125.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3126
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3126.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3127
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3127.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3128
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3128.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3129
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3129.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3130
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3130.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3131
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3131.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3132
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3132.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3133
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3133.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3134
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3134.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3135
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3135.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3136
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3136.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3137
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3137.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3138
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3138.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3139
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3139.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3140
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3140.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3141
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3141.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3142
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3142.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3143
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3143.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3144
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3144.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3145
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3145.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3146
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3146.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3147
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3147.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3148
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3148.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3149
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3149.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3150
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3150.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3151
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3151.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3152
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3152.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3153
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3153.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3154
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3154.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3155
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3155.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3156
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3156.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3157
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3157.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3158
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3158.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3159
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3159.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3160
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3160.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3161
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3161.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3162
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3162.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3163
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3163.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3164
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3164.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3165
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3165.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3166
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3166.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3167
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3167.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3168
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3168.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3169
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3169.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3170
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3170.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3171
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3171.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3172
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3172.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3173
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3173.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3174
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3174.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3175
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3175.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3176
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3176.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3177
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3177.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3178
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3178.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3179
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3179.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3180
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3180.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3181
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3181.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3182
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3182.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3183
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3183.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3184
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3184.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3185
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3185.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3186
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3186.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3187
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3187.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3188
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3188.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3189
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3189.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3190
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3190.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3191
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3191.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3192
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3192.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3193
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3193.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3194
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3194.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3195
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3195.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3196
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3196.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3197
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3197.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3198
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3198.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3199
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3199.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3200
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3200.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3201
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3201.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3202
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3202.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3203
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3203.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3204
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3204.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3205
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3205.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3206
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3206.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3207
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3207.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3208
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3208.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3209
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3209.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3210
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3210.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3211
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3211.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3212
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3212.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3213
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3213.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3214
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3214.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3215
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3215.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3216
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3216.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3217
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3217.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3218
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3218.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone3219
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone3219.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
